tests/e2e/function_void_return_type2.error
Error: syntax error in story at line 2, column 9

2|      return "foo"
               ^^^^^

E0110: Function has no return output defined. Only `return` is allowed.
