tests/e2e/function_void_return_type2.story
function foo returns void
	return "foo"
